PLF-6639 : do not add MaxPermSize option anymore since we do not support Java 7 anymore